Colaboratory를 통해 생성됨

--- a/11-00-CNN-basic.ipynb
+++ b/11-00-CNN-basic.ipynb
@@ -70,14 +70,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4qJmVWpO7ijW"
+        "id": "4qJmVWpO7ijW",
+        "outputId": "980460f9-d181-4d0c-ef14-1ac8e28f4d43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
       ],
       "id": "4qJmVWpO7ijW",
-      "execution_count": 38,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -86,13 +99,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4268d51e-894f-495d-ce7b-729e566f7500"
+        "outputId": "5e4f4357-0c67-4189-f7c2-72488ce959b9"
       },
       "source": [
-        "print('x_train.shape:', x_train.shape, 'y_train.shape:', yr_train.shape)"
+        "print('x_train.shape:', x_train.shape, 'y_train.shape:', y_train.shape)"
       ],
       "id": "mQ6VNIui73Wk",
-      "execution_count": 39,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,14 +122,13 @@
         "id": "-3HBLhZIZIeL"
       },
       "source": [
-        "\n",
         "x_test = x_test / 255\n",
         "x_train = x_train / 255\n",
         "x_train = x_train.reshape(-1, 28, 28, 1)\n",
         "x_test = x_test.reshape(-1, 28, 28, 1)"
       ],
       "id": "-3HBLhZIZIeL",
-      "execution_count": 40,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -129,37 +141,20 @@
         "x_con = tf.keras.layers.Conv2D(filters=16, kernel_size=(3,3), activation='relu',input_shape=x_train.shape[1:])(x_train)"
       ],
       "id": "XZWKjzSE7iwM",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_NU2eoxqYo5_",
-        "outputId": "68d0926e-a4b9-4879-f45e-1cd78efe056a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "_NU2eoxqYo5_"
       },
       "source": [
         "x_con.shape"
       ],
       "id": "_NU2eoxqYo5_",
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "TensorShape([60000, 26, 26, 16])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 46
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
