--- a/11-02-CNN-Ensenble-mnist.ipynb
+++ b/11-02-CNN-Ensenble-mnist.ipynb
@@ -52,7 +52,116 @@
         "from tensorflow.keras import layers"
       ],
       "id": "RK3QTbWDofS7",
-      "execution_count": 1,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ozGIC3c2WXaY"
+      },
+      "source": [
+        "# hyper parameters\n",
+        "learning_rate = 0.001\n",
+        "training_epochs = 15\n",
+        "batch_size = 128\n",
+        "drop_out = 0.3"
+      ],
+      "id": "ozGIC3c2WXaY",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pwl3GhNWLnEx"
+      },
+      "source": [
+        "def get_model():\n",
+        "    inputs = keras.Input(shape=(28,28,1))\n",
+        "\n",
+        "    # CL-PL #1\n",
+        "    x = layers.Conv2D(32, 3, padding='same', activation='relu')(inputs)\n",
+        "    x = layers.MaxPool2D(pool_size=(2,2), strides=2, padding='same')(x)\n",
+        "    x = layers.Dropout(0.3)(x)\n",
+        "\n",
+        "    # CL-PL #2\n",
+        "    x = layers.Conv2D(64, 3, padding='same', activation='relu')(x)\n",
+        "    x = layers.MaxPool2D(pool_size=(2,2), strides=2, padding='same')(x)\n",
+        "    x = layers.Dropout(0.3)(x)\n",
+        "\n",
+        "    # CL-PL #3\n",
+        "    x = layers.Conv2D(128, 3, padding='same', activation='relu')(x)\n",
+        "    x = layers.MaxPool2D(pool_size=(2,2), strides=2, padding='same')(x)\n",
+        "    x = layers.Dropout(0.3)(x)\n",
+        "\n",
+        "    # FC #1\n",
+        "    x = layers.Dense(units=625, activation='relu')(x)\n",
+        "    x = layers.Dropout(0.5)(x)\n",
+        "\n",
+        "    # FC #2\n",
+        "    outputs = layers.Dense(units=10, activation='softmax')(x)\n",
+        "\n",
+        "    return keras.Model(inputs, outputs)"
+      ],
+      "id": "pwl3GhNWLnEx",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "54CJ2joCLnIJ"
+      },
+      "source": [
+        "model1 = get_model()\n",
+        "model2 = get_model()"
+      ],
+      "id": "54CJ2joCLnIJ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ubgOUsXALnMw"
+      },
+      "source": [
+        "inputs = keras.Input(shape=(28,28,1))\n",
+        "y1 = model1(inputs)\n",
+        "y2 = model2(inputs)\n",
+        "outputs = layers.average([y1, y2])\n",
+        "ensemble_model = keras.Model(inputs=inputs, outputs=outputs)\n",
+        "ensemble_model.compile(loss='categorical_crossentropy', optimizer=tf.keras.optimizers.Adam(lr=learning_rate), metrics=['accuracy'])"
+      ],
+      "id": "ubgOUsXALnMw",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wboJFfDrLnQM"
+      },
+      "source": [
+        "model1.summary()\n",
+        "model2.summary()\n",
+        "ensemble_model.summary()"
+      ],
+      "id": "wboJFfDrLnQM",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3S36emJXVD8E"
+      },
+      "source": [
+        "tf.keras.utils.plot_model(ensemble_model, show_shapes=True)"
+      ],
+      "id": "3S36emJXVD8E",
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,26 +191,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mQ6VNIui73Wk",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d7cf2953-cb8a-4e84-b78b-6e6300d11160"
+        "id": "mQ6VNIui73Wk"
       },
       "source": [
         "print('x_train.shape:', x_train.shape, 'y_train.shape:', y_train.shape)"
       ],
       "id": "mQ6VNIui73Wk",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x_train.shape: (60000, 28, 28) y_train.shape: (60000,)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -121,26 +218,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9MlVW4rD9C96",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8960b7c2-84c7-4cf6-ba59-6283fbd250d0"
+        "id": "9MlVW4rD9C96"
       },
       "source": [
         "print('x_train.shape:', x_train.shape, 'x_test.shape:', x_test.shape)"
       ],
       "id": "9MlVW4rD9C96",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x_train.shape: (60000, 28, 28, 1) x_test.shape: (10000, 28, 28, 1)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -159,110 +244,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UflEi-rG7i6E"
+        "id": "GWsy2lQ2XOzU"
       },
       "source": [
-        "# hyper parameters\n",
-        "learning_rate = 0.001\n",
-        "training_epochs = 15\n",
-        "batch_size = 128\n",
-        "drop_out = 0.3"
+        "print('y_train.shape:', y_train.shape)"
       ],
-      "id": "UflEi-rG7i6E",
+      "id": "GWsy2lQ2XOzU",
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KaHEpekz9lcD"
+        "id": "1PWtfBX39s6H"
       },
       "source": [
-        "tf.model = tf.keras.Sequential()\n",
-        "# L1\n",
-        "tf.model.add(tf.keras.layers.Conv2D(filters=32, kernel_size=(3, 3), input_shape=(28, 28, 1), activation='relu'))\n",
-        "tf.model.add(tf.keras.layers.MaxPooling2D(pool_size=(2, 2), strides=2, padding='same'))\n",
-        "tf.model.add(tf.keras.layers.Dropout(rate=drop_out))\n",
-        "\n",
-        "# L2\n",
-        "tf.model.add(tf.keras.layers.Conv2D(filters=32, kernel_size=(3, 3), activation='relu'))\n",
-        "tf.model.add(tf.keras.layers.MaxPooling2D(pool_size=(2, 2), strides=2, padding='same'))\n",
-        "tf.model.add(tf.keras.layers.Dropout(rate=drop_out))\n",
-        "\n",
-        "# L3\n",
-        "tf.model.add(tf.keras.layers.Conv2D(filters=64, kernel_size=(3, 3), activation='relu'))\n",
-        "tf.model.add(tf.keras.layers.MaxPooling2D(pool_size=(2, 2), strides=2, padding='same'))\n",
-        "tf.model.add(tf.keras.layers.Dropout(rate=drop_out))\n",
-        "\n",
-        "\n",
-        "# L4 fully connected\n",
-        "tf.model.add(tf.keras.layers.Flatten())\n",
-        "tf.model.add(tf.keras.layers.Dense(units=128, kernel_initializer='glorot_normal', activation='relu'))\n",
-        "tf.model.add(tf.keras.layers.Dropout(rate=drop_out))\n",
-        "\n",
-        "# L5 FC\n",
-        "tf.model.add(tf.keras.layers.Dense(units=625, kernel_initializer='glorot_normal', activation='relu'))\n",
-        "tf.model.add(tf.keras.layers.Dropout(rate=drop_out))\n",
-        "\n",
-        "# L6 FC\n",
-        "tf.model.add(tf.keras.layers.Dense(units=10, kernel_initializer='glorot_normal', activation='softmax'))\n",
-        "\n",
-        "tf.model.compile(loss='categorical_crossentropy', optimizer=tf.keras.optimizers.Adam(lr=learning_rate), metrics=['accuracy'])\n",
-        "tf.model.summary()"
-      ],
-      "id": "KaHEpekz9lcD",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Q0hpH3JBA4yS"
-      },
-      "source": [
-        "tf.keras.utils.plot_model(tf.model)"
-      ],
-      "id": "Q0hpH3JBA4yS",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1PWtfBX39s6H",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0b173bc7-64a8-4051-b0bc-2ee2520ee99a"
-      },
-      "source": [
-        "tf.model.fit(x_train, y_train, batch_size=batch_size, epochs=training_epochs, verbose=0)"
+        "ensemble_model.fit(x_train, y_train, batch_size=batch_size, epochs=training_epochs, verbose=0)"
       ],
       "id": "1PWtfBX39s6H",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fe890170590>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DYzdN-m79tKA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1e43248e-9e82-4c6f-a784-c1e8ba14b458"
+        "id": "DYzdN-m79tKA"
       },
       "source": [
         "# predict 10 random hand-writing data\n",
@@ -279,27 +285,7 @@
       ],
       "id": "DYzdN-m79tKA",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "index:  5989 actual y:  6 predicted y:  6\n",
-            "index:  7752 actual y:  5 predicted y:  5\n",
-            "index:  1868 actual y:  1 predicted y:  1\n",
-            "index:  8551 actual y:  3 predicted y:  3\n",
-            "index:  6447 actual y:  3 predicted y:  3\n",
-            "index:  1666 actual y:  9 predicted y:  9\n",
-            "index:  2726 actual y:  2 predicted y:  2\n",
-            "index:  6858 actual y:  7 predicted y:  7\n",
-            "index:  4451 actual y:  2 predicted y:  2\n",
-            "index:  1952 actual y:  9 predicted y:  9\n",
-            "313/313 [==============================] - 1s 2ms/step - loss: 0.0233 - accuracy: 0.9927\n",
-            "loss:  0.023263370618224144\n",
-            "accuracy 0.9926999807357788\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
