Colaboratory를 통해 생성됨

--- a/11-02-CNN-Ensenble-mnist.ipynb
+++ b/11-02-CNN-Ensenble-mnist.ipynb
@@ -49,7 +49,8 @@
         "import numpy as np\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
-        "from tensorflow.keras import layers"
+        "from tensorflow.keras import layers\n",
+        "import random"
       ],
       "id": "RK3QTbWDofS7",
       "execution_count": null,
@@ -96,7 +97,8 @@
         "    x = layers.Dropout(0.3)(x)\n",
         "\n",
         "    # FC #1\n",
-        "    x = layers.Dense(units=625, activation='relu')(x)\n",
+        "    flat = tf.reshape(x, [-1, 128 * 4 * 4])\n",
+        "    x = layers.Dense(units=625, activation='relu')(flat)\n",
         "    x = layers.Dropout(0.5)(x)\n",
         "\n",
         "    # FC #2\n",
@@ -272,14 +274,14 @@
       },
       "source": [
         "# predict 10 random hand-writing data\n",
-        "y_predicted = tf.model.predict(x_test)\n",
+        "y_predicted = ensemble_model.predict(x_test)\n",
         "for x in range(0, 10):\n",
         "    random_index = random.randint(0, x_test.shape[0]-1)\n",
         "    print(\"index: \", random_index,\n",
         "          \"actual y: \", np.argmax(y_test[random_index]),\n",
         "          \"predicted y: \", np.argmax(y_predicted[random_index]))\n",
         "\n",
-        "evaluation = tf.model.evaluate(x_test, y_test)\n",
+        "evaluation = ensemble_model.evaluate(x_test, y_test)\n",
         "print('loss: ', evaluation[0])\n",
         "print('accuracy', evaluation[1])"
       ],
