--- a/12-01-rnn-hello.ipynb
+++ b/12-01-rnn-hello.ipynb
@@ -43,28 +43,10 @@
         "id": "RK3QTbWDofS7"
       },
       "source": [
-        "import tensorflow as tf\n",
         "import numpy as np\n",
-        "\n",
-        "idx2char = ['h', 'i', 'e', 'l', 'o']\n",
-        "# Teach hello: hihell -> ihello\n",
-        "x_data = [[0, 1, 0, 2, 3, 3]]   # hihell\n",
-        "x_one_hot = [[[1, 0, 0, 0, 0],   # h 0\n",
-        "              [0, 1, 0, 0, 0],   # i 1\n",
-        "              [1, 0, 0, 0, 0],   # h 0\n",
-        "              [0, 0, 1, 0, 0],   # e 2\n",
-        "              [0, 0, 0, 1, 0],   # l 3\n",
-        "              [0, 0, 0, 1, 0]]]  # l 3\n",
-        "\n",
-        "y_data = [[1, 0, 2, 3, 3, 4]]   # ihello\n",
-        "\n",
-        "\n",
-        "num_classes = 5\n",
-        "input_dim = 5  # one-hot size\n",
-        "hidden_size = 5  # output from the LSTM. 5 to directly predict one-hot\n",
-        "batch_size = 1   # one sentence\n",
-        "sequence_length = 6  # |ihello| == 6\n",
-        "learning_rate = 0.1"
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers"
       ],
       "id": "RK3QTbWDofS7",
       "execution_count": 1,
@@ -73,13 +55,264 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "30dxHmEPog-b"
+        "id": "bQS5aQeDPtNa",
+        "outputId": "c3590339-4ea1-45fd-f9c9-db0f0ca72499",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "idx2char = ['h', 'i', 'e', 'l', 'o']\n",
+        "# Teach hello: hihell -> ihello\n",
+        "# x_data = [[0, 1, 0, 2, 3, 3]]  # hihell\n",
+        "y_data = [[1, 0, 2, 3, 3, 4]]  # ihello\n",
+        "\n",
+        "num_classes = 5\n",
+        "input_dim = 5  # one-hot size, same as hidden_size to directly predict one-hot\n",
+        "sequence_length = 6  # |ihello| == 6\n",
+        "learning_rate = 0.1\n",
+        "\n",
+        "x_one_hot = np.array([[[1, 0, 0, 0, 0],    # h 0\n",
+        "                       [0, 1, 0, 0, 0],    # i 1\n",
+        "                       [1, 0, 0, 0, 0],    # h 0\n",
+        "                       [0, 0, 1, 0, 0],    # e 2\n",
+        "                       [0, 0, 0, 1, 0],    # l 3\n",
+        "                       [0, 0, 0, 1, 0]]],  # l 3\n",
+        "                     dtype=np.float32)\n",
+        "\n",
+        "y_one_hot = tf.keras.utils.to_categorical(y_data, num_classes=num_classes)\n",
+        "print(x_one_hot.shape)\n",
+        "print(y_one_hot.shape)"
+      ],
+      "id": "bQS5aQeDPtNa",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(1, 6, 5)\n",
+            "(1, 6, 5)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_mI3V2WVR96b"
+      },
+      "source": [
+        "tf.model = tf.keras.Sequential()\n",
+        "\n",
+        "# make cell and add it to RNN layer\n",
+        "# input_shape = (1,6,5) => number of sequence (batch), length of sequence, size of input dim\n",
+        "# cell = tf.keras.layers.LSTMCell(units=num_classes, input_shape=(sequence_length, input_dim))\n",
+        "cell = tf.keras.layers.LSTMCell(units=num_classes)\n",
+        "\n",
+        "tf.model.add(tf.keras.layers.RNN(cell=cell, return_sequences=True))\n",
+        "\n",
+        "# single LSTM layer can be used as well instead of creating LSTMCell\n",
+        "# tf.model.add(tf.keras.layers.LSTM(units=num_classes, input_shape=(sequence_length, input_dim), return_sequences=True))\n",
+        "\n",
+        "# fully connected layer\n",
+        "tf.model.add(tf.keras.layers.TimeDistributed(tf.keras.layers.Dense(units=num_classes, activation='softmax')))\n",
+        "\n",
+        "tf.model.compile(loss='categorical_crossentropy', optimizer=tf.keras.optimizers.Adam(lr=learning_rate),\n",
+        "                 metrics=['accuracy'])"
+      ],
+      "id": "_mI3V2WVR96b",
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dpi6fGbSSk_t",
+        "outputId": "124ddd87-0424-4cf9-a35e-c5887a7ccd88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# train\n",
+        "tf.model.fit(x_one_hot, y_one_hot, epochs=50, verbose=0)\n",
+        "tf.model.summary()"
+      ],
+      "id": "dpi6fGbSSk_t",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/50\n",
+            "1/1 [==============================] - 1s 1s/step - loss: 1.6289 - accuracy: 0.1667\n",
+            "Epoch 2/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 1.5113 - accuracy: 0.3333\n",
+            "Epoch 3/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 1.4125 - accuracy: 0.3333\n",
+            "Epoch 4/50\n",
+            "1/1 [==============================] - 0s 9ms/step - loss: 1.3198 - accuracy: 0.3333\n",
+            "Epoch 5/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 1.2396 - accuracy: 0.3333\n",
+            "Epoch 6/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 1.1340 - accuracy: 0.3333\n",
+            "Epoch 7/50\n",
+            "1/1 [==============================] - 0s 6ms/step - loss: 1.0096 - accuracy: 0.5000\n",
+            "Epoch 8/50\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 0.9112 - accuracy: 0.6667\n",
+            "Epoch 9/50\n",
+            "1/1 [==============================] - 0s 8ms/step - loss: 0.8159 - accuracy: 0.8333\n",
+            "Epoch 10/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.7149 - accuracy: 1.0000\n",
+            "Epoch 11/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.6291 - accuracy: 1.0000\n",
+            "Epoch 12/50\n",
+            "1/1 [==============================] - 0s 9ms/step - loss: 0.5352 - accuracy: 1.0000\n",
+            "Epoch 13/50\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 0.4580 - accuracy: 1.0000\n",
+            "Epoch 14/50\n",
+            "1/1 [==============================] - 0s 15ms/step - loss: 0.3954 - accuracy: 1.0000\n",
+            "Epoch 15/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.3268 - accuracy: 1.0000\n",
+            "Epoch 16/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.2765 - accuracy: 1.0000\n",
+            "Epoch 17/50\n",
+            "1/1 [==============================] - 0s 14ms/step - loss: 0.2237 - accuracy: 1.0000\n",
+            "Epoch 18/50\n",
+            "1/1 [==============================] - 0s 11ms/step - loss: 0.1818 - accuracy: 1.0000\n",
+            "Epoch 19/50\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 0.1517 - accuracy: 1.0000\n",
+            "Epoch 20/50\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 0.1204 - accuracy: 1.0000\n",
+            "Epoch 21/50\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 0.1015 - accuracy: 1.0000\n",
+            "Epoch 22/50\n",
+            "1/1 [==============================] - 0s 9ms/step - loss: 0.0808 - accuracy: 1.0000\n",
+            "Epoch 23/50\n",
+            "1/1 [==============================] - 0s 11ms/step - loss: 0.0664 - accuracy: 1.0000\n",
+            "Epoch 24/50\n",
+            "1/1 [==============================] - 0s 9ms/step - loss: 0.0557 - accuracy: 1.0000\n",
+            "Epoch 25/50\n",
+            "1/1 [==============================] - 0s 14ms/step - loss: 0.0437 - accuracy: 1.0000\n",
+            "Epoch 26/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.0370 - accuracy: 1.0000\n",
+            "Epoch 27/50\n",
+            "1/1 [==============================] - 0s 12ms/step - loss: 0.0308 - accuracy: 1.0000\n",
+            "Epoch 28/50\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 0.0245 - accuracy: 1.0000\n",
+            "Epoch 29/50\n",
+            "1/1 [==============================] - 0s 9ms/step - loss: 0.0212 - accuracy: 1.0000\n",
+            "Epoch 30/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.0183 - accuracy: 1.0000\n",
+            "Epoch 31/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.0149 - accuracy: 1.0000\n",
+            "Epoch 32/50\n",
+            "1/1 [==============================] - 0s 8ms/step - loss: 0.0131 - accuracy: 1.0000\n",
+            "Epoch 33/50\n",
+            "1/1 [==============================] - 0s 11ms/step - loss: 0.0120 - accuracy: 1.0000\n",
+            "Epoch 34/50\n",
+            "1/1 [==============================] - 0s 9ms/step - loss: 0.0102 - accuracy: 1.0000\n",
+            "Epoch 35/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.0088 - accuracy: 1.0000\n",
+            "Epoch 36/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.0082 - accuracy: 1.0000\n",
+            "Epoch 37/50\n",
+            "1/1 [==============================] - 0s 8ms/step - loss: 0.0075 - accuracy: 1.0000\n",
+            "Epoch 38/50\n",
+            "1/1 [==============================] - 0s 9ms/step - loss: 0.0064 - accuracy: 1.0000\n",
+            "Epoch 39/50\n",
+            "1/1 [==============================] - 0s 8ms/step - loss: 0.0058 - accuracy: 1.0000\n",
+            "Epoch 40/50\n",
+            "1/1 [==============================] - 0s 11ms/step - loss: 0.0056 - accuracy: 1.0000\n",
+            "Epoch 41/50\n",
+            "1/1 [==============================] - 0s 9ms/step - loss: 0.0051 - accuracy: 1.0000\n",
+            "Epoch 42/50\n",
+            "1/1 [==============================] - 0s 12ms/step - loss: 0.0045 - accuracy: 1.0000\n",
+            "Epoch 43/50\n",
+            "1/1 [==============================] - 0s 11ms/step - loss: 0.0043 - accuracy: 1.0000\n",
+            "Epoch 44/50\n",
+            "1/1 [==============================] - 0s 11ms/step - loss: 0.0042 - accuracy: 1.0000\n",
+            "Epoch 45/50\n",
+            "1/1 [==============================] - 0s 9ms/step - loss: 0.0039 - accuracy: 1.0000\n",
+            "Epoch 46/50\n",
+            "1/1 [==============================] - 0s 8ms/step - loss: 0.0036 - accuracy: 1.0000\n",
+            "Epoch 47/50\n",
+            "1/1 [==============================] - 0s 11ms/step - loss: 0.0035 - accuracy: 1.0000\n",
+            "Epoch 48/50\n",
+            "1/1 [==============================] - 0s 10ms/step - loss: 0.0034 - accuracy: 1.0000\n",
+            "Epoch 49/50\n",
+            "1/1 [==============================] - 0s 8ms/step - loss: 0.0032 - accuracy: 1.0000\n",
+            "Epoch 50/50\n",
+            "1/1 [==============================] - 0s 7ms/step - loss: 0.0030 - accuracy: 1.0000\n",
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "rnn (RNN)                    (None, 6, 5)              220       \n",
+            "_________________________________________________________________\n",
+            "time_distributed (TimeDistri (None, 6, 5)              30        \n",
+            "=================================================================\n",
+            "Total params: 250\n",
+            "Trainable params: 250\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pKtjhfbpSq3f",
+        "outputId": "f0714c8a-66e2-4cb3-e045-ff89c1fe12ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "predictions = tf.model.predict(x_one_hot)\n",
+        "for i, prediction in enumerate(predictions):\n",
+        "    print(prediction)\n",
+        "    # print char using argmax, dict\n",
+        "    result_str = [idx2char[c] for c in np.argmax(prediction, axis=1)]\n",
+        "    print(\"\\tPrediction str: \", ''.join(result_str))"
+      ],
+      "id": "pKtjhfbpSq3f",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1.59739250e-06 9.97640967e-01 2.24051322e-03 1.16577874e-04\n",
+            "  4.59532913e-07]\n",
+            " [9.98104453e-01 1.36637050e-06 1.01977028e-03 8.26131785e-04\n",
+            "  4.82851101e-05]\n",
+            " [5.56185201e-04 2.05169409e-03 9.96818662e-01 3.21109022e-04\n",
+            "  2.52346072e-04]\n",
+            " [6.32158190e-04 1.13547329e-04 5.50567092e-05 9.99195635e-01\n",
+            "  3.61786465e-06]\n",
+            " [7.17938179e-04 2.38366425e-04 2.51435908e-04 9.96386409e-01\n",
+            "  2.40585953e-03]\n",
+            " [8.04431402e-05 6.59276702e-06 2.44110211e-04 5.06785139e-03\n",
+            "  9.94601011e-01]]\n",
+            "\tPrediction str:  ihello\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D-ZeLXzRSuwW"
       },
       "source": [
         ""
       ],
-      "id": "30dxHmEPog-b",
-      "execution_count": null,
+      "id": "D-ZeLXzRSuwW",
+      "execution_count": 5,
       "outputs": []
     }
   ]
