--- a/12-01-rnn-hello.ipynb
+++ b/12-01-rnn-hello.ipynb
@@ -56,10 +56,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bQS5aQeDPtNa",
-        "outputId": "c3590339-4ea1-45fd-f9c9-db0f0ca72499",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ee3bacc8-4148-48c7-9fe1-6864b75b9b82"
       },
       "source": [
         "idx2char = ['h', 'i', 'e', 'l', 'o']\n",
@@ -108,9 +108,9 @@
         "# make cell and add it to RNN layer\n",
         "# input_shape = (1,6,5) => number of sequence (batch), length of sequence, size of input dim\n",
         "# cell = tf.keras.layers.LSTMCell(units=num_classes, input_shape=(sequence_length, input_dim))\n",
-        "cell = tf.keras.layers.LSTMCell(units=num_classes)\n",
-        "\n",
-        "tf.model.add(tf.keras.layers.RNN(cell=cell, return_sequences=True))\n",
+        "# cell = tf.keras.layers.LSTMCell(units=num_classes)\n",
+        "# tf.model.add(tf.keras.layers.RNN(cell=cell, return_sequences=True))\n",
+        "tf.model.add(tf.keras.layers.LSTM(units=num_classes, return_sequences=True))\n",
         "\n",
         "# single LSTM layer can be used as well instead of creating LSTMCell\n",
         "# tf.model.add(tf.keras.layers.LSTM(units=num_classes, input_shape=(sequence_length, input_dim), return_sequences=True))\n",
@@ -129,10 +129,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "dpi6fGbSSk_t",
-        "outputId": "124ddd87-0424-4cf9-a35e-c5887a7ccd88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a62b611a-d6a6-4e3b-f2ee-91037661c5db"
       },
       "source": [
         "# train\n",
@@ -145,111 +145,11 @@
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/50\n",
-            "1/1 [==============================] - 1s 1s/step - loss: 1.6289 - accuracy: 0.1667\n",
-            "Epoch 2/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 1.5113 - accuracy: 0.3333\n",
-            "Epoch 3/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 1.4125 - accuracy: 0.3333\n",
-            "Epoch 4/50\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 1.3198 - accuracy: 0.3333\n",
-            "Epoch 5/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 1.2396 - accuracy: 0.3333\n",
-            "Epoch 6/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 1.1340 - accuracy: 0.3333\n",
-            "Epoch 7/50\n",
-            "1/1 [==============================] - 0s 6ms/step - loss: 1.0096 - accuracy: 0.5000\n",
-            "Epoch 8/50\n",
-            "1/1 [==============================] - 0s 7ms/step - loss: 0.9112 - accuracy: 0.6667\n",
-            "Epoch 9/50\n",
-            "1/1 [==============================] - 0s 8ms/step - loss: 0.8159 - accuracy: 0.8333\n",
-            "Epoch 10/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.7149 - accuracy: 1.0000\n",
-            "Epoch 11/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.6291 - accuracy: 1.0000\n",
-            "Epoch 12/50\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.5352 - accuracy: 1.0000\n",
-            "Epoch 13/50\n",
-            "1/1 [==============================] - 0s 7ms/step - loss: 0.4580 - accuracy: 1.0000\n",
-            "Epoch 14/50\n",
-            "1/1 [==============================] - 0s 15ms/step - loss: 0.3954 - accuracy: 1.0000\n",
-            "Epoch 15/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.3268 - accuracy: 1.0000\n",
-            "Epoch 16/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.2765 - accuracy: 1.0000\n",
-            "Epoch 17/50\n",
-            "1/1 [==============================] - 0s 14ms/step - loss: 0.2237 - accuracy: 1.0000\n",
-            "Epoch 18/50\n",
-            "1/1 [==============================] - 0s 11ms/step - loss: 0.1818 - accuracy: 1.0000\n",
-            "Epoch 19/50\n",
-            "1/1 [==============================] - 0s 7ms/step - loss: 0.1517 - accuracy: 1.0000\n",
-            "Epoch 20/50\n",
-            "1/1 [==============================] - 0s 7ms/step - loss: 0.1204 - accuracy: 1.0000\n",
-            "Epoch 21/50\n",
-            "1/1 [==============================] - 0s 7ms/step - loss: 0.1015 - accuracy: 1.0000\n",
-            "Epoch 22/50\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0808 - accuracy: 1.0000\n",
-            "Epoch 23/50\n",
-            "1/1 [==============================] - 0s 11ms/step - loss: 0.0664 - accuracy: 1.0000\n",
-            "Epoch 24/50\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0557 - accuracy: 1.0000\n",
-            "Epoch 25/50\n",
-            "1/1 [==============================] - 0s 14ms/step - loss: 0.0437 - accuracy: 1.0000\n",
-            "Epoch 26/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.0370 - accuracy: 1.0000\n",
-            "Epoch 27/50\n",
-            "1/1 [==============================] - 0s 12ms/step - loss: 0.0308 - accuracy: 1.0000\n",
-            "Epoch 28/50\n",
-            "1/1 [==============================] - 0s 7ms/step - loss: 0.0245 - accuracy: 1.0000\n",
-            "Epoch 29/50\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0212 - accuracy: 1.0000\n",
-            "Epoch 30/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.0183 - accuracy: 1.0000\n",
-            "Epoch 31/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.0149 - accuracy: 1.0000\n",
-            "Epoch 32/50\n",
-            "1/1 [==============================] - 0s 8ms/step - loss: 0.0131 - accuracy: 1.0000\n",
-            "Epoch 33/50\n",
-            "1/1 [==============================] - 0s 11ms/step - loss: 0.0120 - accuracy: 1.0000\n",
-            "Epoch 34/50\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0102 - accuracy: 1.0000\n",
-            "Epoch 35/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.0088 - accuracy: 1.0000\n",
-            "Epoch 36/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.0082 - accuracy: 1.0000\n",
-            "Epoch 37/50\n",
-            "1/1 [==============================] - 0s 8ms/step - loss: 0.0075 - accuracy: 1.0000\n",
-            "Epoch 38/50\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0064 - accuracy: 1.0000\n",
-            "Epoch 39/50\n",
-            "1/1 [==============================] - 0s 8ms/step - loss: 0.0058 - accuracy: 1.0000\n",
-            "Epoch 40/50\n",
-            "1/1 [==============================] - 0s 11ms/step - loss: 0.0056 - accuracy: 1.0000\n",
-            "Epoch 41/50\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0051 - accuracy: 1.0000\n",
-            "Epoch 42/50\n",
-            "1/1 [==============================] - 0s 12ms/step - loss: 0.0045 - accuracy: 1.0000\n",
-            "Epoch 43/50\n",
-            "1/1 [==============================] - 0s 11ms/step - loss: 0.0043 - accuracy: 1.0000\n",
-            "Epoch 44/50\n",
-            "1/1 [==============================] - 0s 11ms/step - loss: 0.0042 - accuracy: 1.0000\n",
-            "Epoch 45/50\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0039 - accuracy: 1.0000\n",
-            "Epoch 46/50\n",
-            "1/1 [==============================] - 0s 8ms/step - loss: 0.0036 - accuracy: 1.0000\n",
-            "Epoch 47/50\n",
-            "1/1 [==============================] - 0s 11ms/step - loss: 0.0035 - accuracy: 1.0000\n",
-            "Epoch 48/50\n",
-            "1/1 [==============================] - 0s 10ms/step - loss: 0.0034 - accuracy: 1.0000\n",
-            "Epoch 49/50\n",
-            "1/1 [==============================] - 0s 8ms/step - loss: 0.0032 - accuracy: 1.0000\n",
-            "Epoch 50/50\n",
-            "1/1 [==============================] - 0s 7ms/step - loss: 0.0030 - accuracy: 1.0000\n",
             "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "rnn (RNN)                    (None, 6, 5)              220       \n",
+            "lstm (LSTM)                  (None, 6, 5)              220       \n",
             "_________________________________________________________________\n",
             "time_distributed (TimeDistri (None, 6, 5)              30        \n",
             "=================================================================\n",
@@ -266,10 +166,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pKtjhfbpSq3f",
-        "outputId": "f0714c8a-66e2-4cb3-e045-ff89c1fe12ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "88182469-70de-4beb-c3ca-9c92281b0298"
       },
       "source": [
         "predictions = tf.model.predict(x_one_hot)\n",
@@ -285,18 +185,12 @@
         {
           "output_type": "stream",
           "text": [
-            "[[1.59739250e-06 9.97640967e-01 2.24051322e-03 1.16577874e-04\n",
-            "  4.59532913e-07]\n",
-            " [9.98104453e-01 1.36637050e-06 1.01977028e-03 8.26131785e-04\n",
-            "  4.82851101e-05]\n",
-            " [5.56185201e-04 2.05169409e-03 9.96818662e-01 3.21109022e-04\n",
-            "  2.52346072e-04]\n",
-            " [6.32158190e-04 1.13547329e-04 5.50567092e-05 9.99195635e-01\n",
-            "  3.61786465e-06]\n",
-            " [7.17938179e-04 2.38366425e-04 2.51435908e-04 9.96386409e-01\n",
-            "  2.40585953e-03]\n",
-            " [8.04431402e-05 6.59276702e-06 2.44110211e-04 5.06785139e-03\n",
-            "  9.94601011e-01]]\n",
+            "[[1.4605483e-03 9.9545622e-01 1.2130295e-03 1.8597755e-03 1.0409874e-05]\n",
+            " [9.9614477e-01 5.1702915e-05 1.8787251e-03 1.0797977e-03 8.4507931e-04]\n",
+            " [8.8519679e-04 1.0277849e-03 9.9111301e-01 6.9649694e-03 9.0870690e-06]\n",
+            " [9.4981646e-05 4.8281243e-05 2.4473509e-03 9.9730432e-01 1.0510432e-04]\n",
+            " [7.1928278e-04 1.1667537e-05 1.2177313e-03 9.8936021e-01 8.6911181e-03]\n",
+            " [2.0545321e-04 3.1218607e-07 8.1139915e-06 7.0822984e-03 9.9270380e-01]]\n",
             "\tPrediction str:  ihello\n"
           ],
           "name": "stdout"
